--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
 <body>
 
 	<div class="container">
-
 		<div class="display-4 mb-2">ToDo Application</div>
-		<div class="h4 mb-5">ToDo list for today
-		</div>
+		<div class="h4 mb-5">ToDo list for today</div>
 
 		<div class="card mb-4">
-			<ul id="tasksList" class="list-group list-group-flush">
-
-			</ul>
+			<ul id="tasksList" class="list-group list-group-flush"></ul>
 		</div>
 
 		<div class="card bg-light">
@@ -37,12 +33,9 @@
 				</form>
 			</div>
 		</div>
-
-
 	</div>
 
-
 	<script src="js/main.js"></script>
+	
 </body>
-
 </html>
